# cmake_demo

./: CMakeLists.txt  README.md  main.cc
auxs/: auxs.cc  auxs.h
hello/: hello.h
pkg/: CMakeLists.txt  pkg.cc
pkg/include/: pkg.h
stat/: CMakeLists.txt  static.cc  static.h
stat2/: CMakeLists.txt  static2.cc  static2.h
sub/: CMakeLists.txt  sub.cc  sub.h
world/: world.cc  world.h
